--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="libs/rain.js" type="module"></script>
 </head>
 <body>
+    <audio src="audio/rain.mp3" loop></audio>
 <div class="logo" style="background-image: url(img/logo.svg)"></div>
 <section class="layers">
     <div class="layers__container">
