--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 <body>
     <audio src="audio/rain.mp3" loop></audio>
-<div class="logo" style="background-image: url(img/logo.svg)"></div>
+    <div class="logo__container">
+        <img src="./img/logo.png"></img>
+    </div>
+
 <section class="layers">
     <div class="layers__container">
         <div class="layers__item layer-1" style="background-image: url(img/layer-1.jpg)"></div>
         <div class="layers__item layer-2" style="background-image: url(img/layer-2.png)"></div>
         <div class="layers__item layer-3">
             <div class="hero__content">
-                <h1>Natural Forest <span>FOR LIFE</span></h1>
-                <div class="hero-content__p">Ambient vibe</div>
+                <h1>Natural Forest <span>For Relax</span></h1>
+                <div class="hero-content__p">Ambient sound</div>
                 <button class="button-start">Start rain</button>
             </div>
         </div>
